# pdata

./: .gitignore  README.md  pyproject.toml
pdata/: __init__.py  encode.py  flow.py  flow_matching.py  noise.py  sample.py  sdedm.py  time.py  typing.py
scripts/: __init__.py  otfm.py  sdedm.py
